<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/cpu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpu_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/gpu"/>

    <TextView
        android:id="@+id/gpu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gpu_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ambient"/>

    <TextView
        android:id="@+id/ambient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ambient_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/avgCpu"/>

    <TextView
        android:id="@+id/avgCpu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_cpu_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/avgGpu"/>

    <TextView
        android:id="@+id/avgGpu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_gpu_temperature"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/avgAmbient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_ambiental_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avgGpu" />

    <TextView
        android:id="@+id/maxCpu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maximum_cpu_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avgAmbient" />

    <TextView
        android:id="@+id/maxGpu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maximum_gpu_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxCpu" />

    <TextView
        android:id="@+id/maxAmbient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maximum_ambiental_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxGpu" />

</androidx.constraintlayout.widget.ConstraintLayout>